@@ -1,5 +1,12 @@
 2008-08-02  Sebastian Dröge  <sebastian.droege@collabora.co.uk>
 
+	* gst/matroska/matroska-mux.c:
+	(gst_matroska_mux_audio_pad_setcaps):
+	Fix muxing of MP3/MP2 with different MPEG versions by calculating the
+	duration of a frame with the new mpegaudioversion caps field.
+
+2008-08-02  Sebastian Dröge  <sebastian.droege@collabora.co.uk>
+
 	* gst/matroska/matroska-demux.c: (gst_matroska_demux_finalize),
 	(gst_matroska_demux_class_init), (gst_matroska_demux_init),
 	(gst_matroska_demux_combine_flows), (gst_matroska_demux_reset),
